css/main.css
/*****************************************************************************/
/*
/* Main
/*
/*****************************************************************************/
body {
  background: #f2f2f2;
}

a {
  color: #21489B;
  text-decoration: none;
}

/*****************************************************************************/
/*
/* Container
/*
/*****************************************************************************/
.container {
  width: 75%;
}

/*****************************************************************************/
/*
/* Content
/*
/*****************************************************************************/
.content {
  width: 80%;
  margin: 30px auto;
  padding: 20px;
}

/*****************************************************************************/
/*
/* Sidebar
/*
/*****************************************************************************/
.sidebar {
  background: #506BA5;
  background: #2c3e50;
  position: fixed;
  top: 0;
  right: 0;
  width: 25%;
  height: 100%;
  box-shadow: inset 1em 0 3em -1em rgba(0,0,0,.6);
  text-align: center;
  color: #eee;
}

.sidebar a {
  color: #f2f2f2;
}

/*****************************************************************************/
/*
/* Social Links
/*
/*****************************************************************************/
.social-links {
  width: 100%;
  margin: 5% auto 0 auto;
  padding: 0 0 0 10px;
}

.social-links li {
  list-style: none;
  display: inline-block;
  margin-right: 25px;
}

.social-links a {
  font-size: 32px;
}

.social-links a:hover {
  color: #F7C769;
  color: #6986E0;
  color: #3498db;
}


/*****************************************************************************/
/*
/* About
/*
/*****************************************************************************/
.about h2,
.about h4 {
  font-family: 'Jockey One', sans-serif;
}

.about h2 {
  font-weight: 100;
  font-size: 36px;
  text-shadow: 0 1px 0 rgba(0,0,0,.6);
  margin: 5% auto 0 auto;
  line-height: 40px;
}

.about h4 {
  margin-top: 0;
}

.about h2:hover {
  color: #3498db;
}

.about img {
  border: 5px solid #f2f2f2;
  border-radius: 75px;
  margin-top: 10%;
  width: 130px;
}

/*****************************************************************************/
/*
/* Navigation
/*
/*****************************************************************************/
.navigation {
  margin: 0 auto;
  width: 60%;
}

.navigation nav {
  font-size: 0; /* hack to remove 1px distance between menu items */
  display: inline-block;
  width: 100%;
}

.navigation nav ul {
  width: 100%;
  height: 100%;
  padding: 0;
}

.navigation nav li {
  display: inline-block;
  margin-bottom: 8px;
  border-radius: 5px;
  width: 100%;
  line-height: 16px;
}

.navigation a {
  border: 1px solid rgba(49, 55, 199, 0.48);
  text-decoration: none;
  border-radius: 5px;
  display: block;
  font-size: 16px;
  padding: 7px;
  font-weight: 200;
  height: 100%;
  background: #6986E0;
  background: #08c;
  box-shadow: 0 .1em .3em .1em rgba(0,0,0,.2);
}

.navigation a:hover {
  box-shadow: inset 0 .1em .1em .1em rgba(0,0,0,.4);
}

